# Procuro

./: .claudeignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  entrypoint.sh  eslint.config.js  package-lock.json  package.json  pyproject.toml  run_pipeline.py
.beads/: issues.jsonl
.github/workflows/: bootstrap.yml  build-deploy.yml  deploy.yml  logs.yml
alembic/: env.py
alembic/versions/: 06e7fb7357a1_merge_heads.py  11eca73df077_purge_tainted_automation_failures.py  412740f85c98_add_unprocessable_thread_state.py  615186236f63_add_pending_reply_to_supplier_threads.py  6739745bdf57_add_automation_events_table.py  775631f2aaa9_split_product_into_two_tables_source_.py  8c4d86931179_add_keyvalue_store.py  a3a4a63a0c35_add_supplier_unique_constraints_and_.py  b4f8a2c91d03_add_attachments_to_messages.py  c7e2f1a3b5d8_add_channel_and_platform_thread_url.py  d1a2b3c4e5f6_add_negotiation_failures.py  dd64606e590c_initial_tables.py  ef873be02e79_add_match_status_match_confidence_match_.py  fd096fda7f8f_remove_spec_check_pass_and_fail_states.py
app/: README.md  export_xlsx.py  main.py  main_test.py
app/agent/: inquiry_agent.py  main.py  main_test.py  match_agent.py  negotiation_agent.py  query_agent.py  spec_extraction.py  spec_extraction_test.py  stage_five_negotiation.py  stage_five_negotiation_test.py  stage_four_inbox_triage.py  stage_four_inbox_triage_test.py  stage_one_spec_extraction.py  stage_one_spec_extraction_test.py  stage_six_sheet_update_test.py  stage_three_outreach.py  stage_three_outreach_test.py  stage_two_supplier_search.py  stage_two_supplier_search_test.py
app/base/: config.py  llm.py  llm_test.py  scheduler.py
app/db/: database.py
app/pipeline/: batch_executor.py  browser_executor.py  browser_executor_test.py
app/services/: alibaba.py  alibaba_test.py  browser.py  browser_test.py  captcha.py  captcha_test.py  gmail.py  gmail_test.py  sheets.py  (+3 more)
docs/: ONBOARDING.md
html_test_fixtures/: Alibaba_Captcha Interception.html  Buy Kogan 75_ QLED 4K Smart AI Google TV - Q97T Online _ Kogan.com.html  Smart Multimedia Projector - White - Kmart.html  alibaba_slider_captcha.html
scripts/: create_release.sh  explore_gs_inquiry.py  explore_gs_messages.py  explore_message_center.py  explore_platform_reply.py  run_pipeline.py  watch_inquiry.py
(+49 files in other folders)
