[project]
name = "procuro"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "bjorkbjork", email = "francois@francoisvankempen.com"},
]
dependencies = ["browserbase>=1.8.0", "pydantic>=2.13.3", "pydantic-logfire>=0.0.1", "pydantic-ai>=1.88.0", "fastapi>=0.136.1", "fastmcp>=3.2.4", "sqlalchemy>=2.0.49", "psycopg>=3.3.3", "psycopg2>=2.9.12", "alembic>=1.18.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
