[project]
name = "procuro"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "bjorkbjork", email = "francois@francoisvankempen.com"},
]
dependencies = ["browserbase>=1.8.0", "pydantic>=2.13.3", "pydantic-logfire>=0.0.1", "pydantic-ai>=1.88.0", "fastapi>=0.136.1", "fastmcp>=3.2.4", "sqlalchemy>=2.0.49", "psycopg>=3.3.3", "psycopg2>=2.9.12", "alembic>=1.18.4", "google-api-python-client>=2.194.0", "google-auth-oauthlib>=1.3.1", "google-auth-httplib2>=0.3.1", "playwright>=1.59.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
