[project]
name = "procuro"
version = "0.1.0"
description = "Default template for PDM package"
dependencies = ["browserbase>=1.8.0", "pydantic>=2.13.3", "pydantic-logfire>=0.0.1", "pydantic-ai>=1.88.0", "sqlalchemy>=2.0.49", "psycopg>=3.3.3", "psycopg2>=2.9.12", "alembic>=1.18.4", "google-api-python-client>=2.194.0", "google-auth-oauthlib>=1.3.1", "google-auth-httplib2>=0.3.1", "playwright>=1.59.0", "beautifulsoup4>=4.14.3", "apscheduler>=3.11.2", "2captcha-python>=2.0.6", "pyotp>=2.9.0", "stamina>=26.1.0", "Pillow>=12.2.0"]
requires-python = "==3.12.*"
readme = "README.md"

[[project.authors]]
name = "bjorkbjork"
email = "francois@francoisvankempen.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0", "black>=26.3.1"]

[tool.pdm]
distribution = false

[tool.pdm.scripts._.env]
PYTHONPATH = "."

[tool.pytest.ini_options]
markers = ["integration: hits real external services (Browserbase, Alibaba, Gmail etc.)"]
addopts = "-m 'not integration'"
